# TCPSrv

./: .directory  CMakeLists.txt  CMakeLists.txt~  README.md  TcpServer.kdev4  header.h  main.c  main_srv.c
.kdev4/: TcpServer.kdev4
src/: CMakeLists.txt  CMakeLists.txt~  connection_handling.c  connection_handling.c~  connection_handling.h  defines.h  defines.h~  main.c  main.c~  trash
src/commands/: CMakeLists.txt  commands.h  get.c  ls.c  move.c  put.c  quit.c  rename.c  replace.c  rm.c
src/commands_handling/: CMakeLists.txt  CMakeLists.txt~  command_get.c  command_get.c~  command_ls.c  command_ls.c~  command_move.c  command_move.c~  command_put.c  command_put.c~  command_quit.c  command_quit.c~  command_rename.c  command_rm.c  command_rm.c~
src/messages/: info_local_handler.c  info_local_handler.h  info_remote_handler.c  info_remote_handler.h
src/messages_handling/: CMakeLists.txt  CMakeLists.txt~  info_local_handler.c  info_local_handler.c~  info_remote_handler.c  info_remote_handler.c~
src/parsers/: CMakeLists.txt  CMakeLists.txt~  input_parser.c  input_parser.h  input_parser_local.c  input_parser_local.c~  input_parser_remote.c~  splitter.c  splitter.c~  splitter.h
src/semaphores/: CMakeLists.txt  flags.c  flags.h  semaphores.c  semaphores.h
src/signals/: signals.c  signals.h
src/signals_handling/: CMakeLists.txt~  signals.c  signals.c~
