cmake_minimum_required (VERSION 2.6)


include_directories("${PROJECT_SOURCE_DIR}/src")
add_executable(tcpserver main.c connection_handling.c)
add_subdirectory(commands)
add_subdirectory(parsers)
add_subdirectory(messages)
add_subdirectory(signals)
add_subdirectory(semaphores)
add_dependencies (tcpserver commands)
add_dependencies (tcpserver parsers)
add_dependencies (tcpserver messages)
add_dependencies (tcpserver signals)
add_dependencies (tcpserver semaphores)
target_link_libraries(tcpserver commands)
target_link_libraries(tcpserver parsers)
target_link_libraries(tcpserver messages)
target_link_libraries(tcpserver signals)
target_link_libraries(tcpserver semaphores)
install (PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/tcpserver DESTINATION bin)